# pulp

./: .gitattributes  .gitignore  LICENSE  README.md  RELEASING.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
.github/workflows/: release.yml
scripts/: PR1-MANUAL-STEPS.md  build-release.ps1  build-release.sh  bump.ps1  bump.sh  cargo-check.ps1  check-ico.ps1  check-msvc.ps1  check-rust.ps1  clear-icon-cache.ps1  extract-icon.ps1  force-rebuild.ps1  gen-signer.ps1  latest.json  make-icons.ps1  rebuild-clean.ps1  regen-key.ps1  release-notes-0.1.1.txt  release-notes-0.1.2.txt  release-notes-0.1.3.txt  release-notes-0.1.4.txt  release-notes-0.1.5.txt  release-notes-0.1.6-rc1.txt  release-notes-0.1.6-rc2.txt  release-notes-0.1.6.txt  release-notes-0.1.7.txt  release-notes-0.1.8.txt  release-notes.md  release-v0.1.1.ps1  release.ps1  release.sh  sign-and-release.ps1  verify-install.ps1
scripts/ci/: assemble-latest-json.js
src/: App.module.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  config.rs  db.rs  lib.rs  main.rs  tray.rs
src/components/: ClipItem.module.css  ClipItem.tsx  ClipList.module.css  ClipList.tsx  Footer.module.css  Footer.tsx  Header.module.css  Header.tsx  HotkeyCapture.module.css  HotkeyCapture.tsx  Onboarding.module.css  Onboarding.tsx  PulpLogo.tsx  SearchBar.module.css  SearchBar.tsx  Settings.module.css  Settings.tsx  TabBar.module.css  TabBar.tsx  Toast.tsx  (+5 more)
(+10 files in other folders)
