[package]
name = "pulp"
version = "0.1.4"
description = "Pulp clipboard manager"
authors = ["you"]
edition = "2021"

[lib]
name = "pulp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
